--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
+# Virtual Environment
+venv/
 env/
+ENV/
+
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Project specific
+logs/
 super_resolution_dataset/
-super_resolution_dataset.zip
+*.ckpt
+*.pth
+*.pt
+*.pkl
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db 
